<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AddWordFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/etWord"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddWordTitle"
                android:hint="@string/hint_word"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/etWordInSentence"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etWordDefinition"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:hint="@string/hint_word_in_sentence"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etWordDefinition"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spWordType"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:hint="@string/hint_word_definition"
                app:layout_constraintStart_toStartOf="parent"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spWordType"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etWord"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:hint="@string/hint_word_type"
                app:layout_constraintStart_toStartOf="parent"
                android:entries="@array/wordTypes"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/title_new_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddWordTitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:textAlignment="center"/>
        <Button
                android:text="@string/btn_add_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddWord"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etWordInSentence"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>